[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ilqr"
version = "0.1.0"
description = "Iterative Linear Quadratic Regulator (iLQR) for non-linear trajectory optimization"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "sympy",
    "matplotlib",
]

[tool.setuptools]
packages = ["ilqr"]
